syntax = "proto3";
package models;
option go_package = "./models";

import "github.com/infobloxopen/protoc-gen-gorm/options/gorm.proto";

message TransactionByAddress {
  option (gorm.opts) = {ormable: true};

  string transaction_hash = 1 [(gorm.field).tag = {primary_key: true}];
  string address = 2 [(gorm.field).tag = {primary_key: true}];
  int64 block_number = 3 [(gorm.field).tag = {index: "transaction_by_address_idx_block_number"}];
}
